force-app/main/default/objects/RenterOps_Settings__c/RenterOps_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>RenterOps Settings</label>
</CustomObject>