force-app/main/default/objects/RenterOps_Settings__c/fields/Allow_Overpayment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Overpayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Overpayment</label>
    <type>Checkbox</type>
</CustomField>