force-app/main/default/objects/RenterOps_Settings__c/fields/Default_Invoice_Due_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Invoice_Due_Days__c</fullName>
    <label>Default Invoice Due Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>