force-app/main/default/objects/RenterOps_Settings__c/fields/Default_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Method__c</fullName>
    <label>Default Payment Method</label>
    <length>20</length>
    <type>Text</type>
</CustomField>