force-app/main/default/objects/RenterOps_Settings__c/fields/Enable_Invoice_Wizard__c.field-meta.xml
<CustomField>
    <fullName>Enable_Invoice_Wizard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Invoice Wizard</label>
    <type>Checkbox</type>
</CustomField>