force-app/main/default/objects/RenterOps_Settings__c/fields/Enable_Payment_Wizard__c.field-meta.xml
<CustomField>
    <fullName>Enable_Payment_Wizard__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Payment Wizard</label>
    <type>Checkbox</type>
</CustomField>